slight spacing fix

--- a/src/css/link.css
+++ b/src/css/link.css
@@ -1,5 +1,5 @@
 .link {
-  padding: 4px 2px;
+  padding: 6px 14px;
   border-radius: 10px;
   margin-bottom: 1rem;
   display: flex;
@@ -10,14 +10,14 @@
   align-items: center;
   text-decoration: none;
   color: black;
-  background: linear-gradient(
-    87deg,
-    rgba(176, 230, 113, 1) 0%,
-    rgba(62, 190, 48, 1) 81%,
-    rgba(85, 156, 77, 1) 100%
-  );
+  background: linear-gradient( 87deg, rgba(176, 230, 113, 1) 0%, rgba(62, 190, 48, 1) 81%, rgba(85, 156, 77, 1) 100%);
 }
-.link > img {
+
+.link_name{
+  font-weight: 600;
+}
+
+.link>img {
   height: 2rem;
   object-fit: cover;
 }
